--- a/index.html
+++ b/index.html
@@ -185,6 +185,28 @@
         </div>
         <div class="job clearfix">
           <div class="col-xs-3">
+            <div class="profession">Challenge &amp; Demonstration Co-Chair</div>
+            <div class="year">2022</div>
+          </div>
+          <div class="col-xs-9">
+            <div class="where">
+              <a target="_blank" href="https://slt2022.org/">IEEE SLT 2022</a>
+            </div>
+          </div>
+        </div>
+        <div class="job clearfix">
+          <div class="col-xs-3">
+            <div class="profession">Panelist</div>
+            <div class="year">2022</div>
+          </div>
+          <div class="col-xs-9">
+            <div class="where">
+              <a target="_blank" href="https://beta.nsf.gov/events/proposal-review-panels">NSF Proposal Review Panel</a>
+            </div>
+          </div>
+        </div>
+        <div class="job clearfix">
+          <div class="col-xs-3">
             <div class="profession">Speech and Language Processing Technical Committee (SLTC)</div>
             <div class="year">2021-2023</div>
           </div>
@@ -352,13 +374,42 @@
         <h2>Publications</h2>
         <div class="publication clearfix">
           <div class="col-xs-1">
+            <div class="year">2023</div>
+          </div>
+          <div class="col-xs-11">
+            <div class="pid_conference" style="display:inline">[C67] </div>
+            <div class="title" style="display:inline"> Identifying Entrainment in Task-oriented Conversations.</div>
+            <div class="author">Run Chen, Yang Liu, Alexandros Papangelis, <span>Seokhwan Kim</span>, Julia Hirschberg, Dilek Hakkani-Tur</div>
+            <div class="book">To appear in Proceedings of the 2023 IEEE International Conference on Acoustics, Speech, and Signal Processing (<a target="_blank" href="https://2023.ieeeicassp.org/">ICASSP 2023</a>), Rhodes Island, Jun 2023.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
+            <div class="pid_conference" style="display:inline">[C66] </div>
+            <div class="title" style="display:inline">PLACES: Prompting Language Models for Social Conversation Synthesis.<div class="link" style="display:inline"><a target="_blank" href="https://arxiv.org/abs/2302.03269">[preprint]</a></div></div>
+            <div class="author">Maximillian Chen, Alexandros Papangelis, Chenyang Tao, <span>Seokhwan Kim</span>, Andy Rosenbaum, Yang Liu, Zhou Yu, Dilek Hakkani-Tur</div>
+            <div class="book">To appear in Proceedings of the 17th Conference of the European Chapter of the Association for Computational Linguistics (<a target="_blank" href="https://2023.eacl.org/">EACL 2023</a>), Dubrovnik, May 2023. (Findings)</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
+            <div class="pid_conference" style="display:inline">[C65] </div>
+            <div class="title" style="display:inline">Selective In-Context Data Augmentation for Intent Detection using Pointwise V-Information.<div class="link" style="display:inline"><a target="_blank" href="https://arxiv.org/abs/2302.05096">[preprint]</a></div></div>
+            <div class="author">Yen Ting Lin, Alexandros Papangelis, <span>Seokhwan Kim</span>, Sungjin Lee, Devamanyu Hazarika, Mahdi Namazifar, Di Jin, Yang Liu, Dilek Hakkani-Tur</div>
+            <div class="book">To appear in Proceedings of the 17th Conference of the European Chapter of the Association for Computational Linguistics (<a target="_blank" href="https://2023.eacl.org/">EACL 2023</a>), Dubrovnik, May 2023.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1">
             <div class="year">2022</div>
           </div>
           <div class="col-xs-11">
             <div class="pid_conference" style="display:inline">[C64] </div>
-            <div class="title" style="display:inline">Knowledge-Grounded Conversational Data Augmentation with Generative Conversational Networks.<div class="link" style="display:inline"><a target="_blank" href="https://arxiv.org/abs/2207.11363">[preprint]</a></div></div>
+            <div class="title" style="display:inline">Knowledge-Grounded Conversational Data Augmentation with Generative Conversational Networks.<div class="link" style="display:inline"><a target="_blank" href="https://aclanthology.org/2022.sigdial-1.3.pdf">[PDF]</a></div><div class="link" style="display:inline"><a target="_blank" href="https://aclanthology.org/2022.sigdial-1.3.bib">[bib]</a></div></div>
             <div class="author">Yen-Ting Lin, Alexandros Papangelis, <span>Seokhwan Kim</span>, Dilek Hakkani-Tur</div>
-            <div class="book">To appear in Proceedings of the 23rd Annual Meeting of the Special Interest Group on Discourse and Dialogue (<a target="_blank" href="https://2022.sigdial.org/">SIGDIAL 2022</a>), Edinburgh, Sep 2022.</div>
+            <div class="book">Proceedings of the 23rd Annual Meeting of the Special Interest Group on Discourse and Dialogue (<a target="_blank" href="https://2022.sigdial.org/">SIGDIAL 2022</a>), Edinburgh, Sep 2022.</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -1054,6 +1105,16 @@
         <h2>Patents</h2>
         <div class="publication clearfix">
           <div class="col-xs-12">
+            <div class="pid_patent" style="display:inline">[P18] </div>
+            <div class="title" style="display:inline">Answering questions during video playback.</div>
+            <div class="author">
+              <span>Seokhwan Kim</span>
+            </div>
+            <div class="book">Registration #US11544590B2, USA, 03 Jan 2023.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-12">
             <div class="pid_patent" style="display:inline">[P17] </div>
             <div class="title" style="display:inline">Generating a response to a user query utilizing visual features of a video segment and a query-response-neural network.</div>
             <div class="author">Wentian Zhao, <span>Seokhwan Kim</span>, Ning Xu, Hailin Jin</div>
@@ -1189,7 +1250,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2022-08-22</div>
+      <div id="footer">Last updated: 2023-03-13</div>
     </div>
   </body>
 </html>
