--- a/index.html
+++ b/index.html
@@ -336,6 +336,18 @@
         <h2>Tutorials and Invited Talks</h2>
         <div class="publication clearfix">
           <div class="col-xs-1">
+            <div class="year">2023</div>
+          </div>
+          <div class="col-xs-11">
+            <div class="title" style="display:inline">"How Robust R U?": Evaluating Task-Oriented Dialogue Systems on Spoken Conversations.</div>
+            <div class="author">
+              <span>Seokhwan Kim</span>
+            </div>
+            <div class="book">Invited Talk @ Hugging Face Audio Transformers Course Launch Event, 14 Jun 2023.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1">
             <div class="year">2020</div>
           </div>
           <div class="col-xs-11">
@@ -380,7 +392,7 @@
             <div class="pid_conference" style="display:inline">[C67] </div>
             <div class="title" style="display:inline"> Identifying Entrainment in Task-oriented Conversations.</div>
             <div class="author">Run Chen, Yang Liu, Alexandros Papangelis, <span>Seokhwan Kim</span>, Julia Hirschberg, Dilek Hakkani-Tur</div>
-            <div class="book">To appear in Proceedings of the 2023 IEEE International Conference on Acoustics, Speech, and Signal Processing (<a target="_blank" href="https://2023.ieeeicassp.org/">ICASSP 2023</a>), Rhodes Island, Jun 2023.</div>
+            <div class="book">Proceedings of the 2023 IEEE International Conference on Acoustics, Speech, and Signal Processing (<a target="_blank" href="https://2023.ieeeicassp.org/">ICASSP 2023</a>), Rhodes Island, Jun 2023.</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -389,7 +401,7 @@
             <div class="pid_conference" style="display:inline">[C66] </div>
             <div class="title" style="display:inline">PLACES: Prompting Language Models for Social Conversation Synthesis.<div class="link" style="display:inline"><a target="_blank" href="https://arxiv.org/abs/2302.03269">[preprint]</a></div></div>
             <div class="author">Maximillian Chen, Alexandros Papangelis, Chenyang Tao, <span>Seokhwan Kim</span>, Andy Rosenbaum, Yang Liu, Zhou Yu, Dilek Hakkani-Tur</div>
-            <div class="book">To appear in Proceedings of the 17th Conference of the European Chapter of the Association for Computational Linguistics (<a target="_blank" href="https://2023.eacl.org/">EACL 2023</a>), Dubrovnik, May 2023. (Findings)</div>
+            <div class="book">Proceedings of the 17th Conference of the European Chapter of the Association for Computational Linguistics (<a target="_blank" href="https://2023.eacl.org/">EACL 2023</a>), Dubrovnik, May 2023. (Findings)</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -398,7 +410,7 @@
             <div class="pid_conference" style="display:inline">[C65] </div>
             <div class="title" style="display:inline">Selective In-Context Data Augmentation for Intent Detection using Pointwise V-Information.<div class="link" style="display:inline"><a target="_blank" href="https://arxiv.org/abs/2302.05096">[preprint]</a></div></div>
             <div class="author">Yen Ting Lin, Alexandros Papangelis, <span>Seokhwan Kim</span>, Sungjin Lee, Devamanyu Hazarika, Mahdi Namazifar, Di Jin, Yang Liu, Dilek Hakkani-Tur</div>
-            <div class="book">To appear in Proceedings of the 17th Conference of the European Chapter of the Association for Computational Linguistics (<a target="_blank" href="https://2023.eacl.org/">EACL 2023</a>), Dubrovnik, May 2023.</div>
+            <div class="book">Proceedings of the 17th Conference of the European Chapter of the Association for Computational Linguistics (<a target="_blank" href="https://2023.eacl.org/">EACL 2023</a>), Dubrovnik, May 2023.</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -1250,7 +1262,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2023-03-13</div>
+      <div id="footer">Last updated: 2023-06-14</div>
     </div>
   </body>
 </html>
