--- a/index.html
+++ b/index.html
@@ -389,6 +389,25 @@
             <div class="year">2023</div>
           </div>
           <div class="col-xs-11">
+            <div class="pid_conference" style="display:inline">[C69] </div>
+            <div class="title" style="display:inline">"What do others think?": Task-Oriented Conversational Modeling with Subjective Knowledge.<div class="link" style="display:inline"><a target="_blank" href="https://arxiv.org/abs/2305.12091">[preprint]</a></div></div>
+            <div class="author">Chao Zhao, Spandana Gella, <span>Seokhwan Kim</span>, Di Jin, Devamanyu Hazarika, Alexandros Papangelis, Behnam Hedayatnia, Mahdi Namazifar, Yang Liu, Dilek Hakkani-Tur
+</div>
+            <div class="book">To appear in Proceedings of the 24th Meeting of the Special Interest Group on Discourse and Dialogue (<a target="_blank" href="https://2023.sigdial.org/">SIGDIAL 2023</a>), Prague, Sep 2023.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
+            <div class="pid_conference" style="display:inline">[C68] </div>
+            <div class="title" style="display:inline">Investigating the Representation of Open Domain Dialogue Context for Transformer Models.</div>
+            <div class="author">Vishakh Padmakumar, Behnam Hedayatnia, Di Jin, Patrick Lange, <span>Seokhwan Kim</span>, Nanyun Peng, Yang Liu, Dilek Hakkani-Tur</div>
+            <div class="book">To appear in Proceedings of the 24th Meeting of the Special Interest Group on Discourse and Dialogue (<a target="_blank" href="https://2023.sigdial.org/">SIGDIAL 2023</a>), Prague, Sep 2023.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
             <div class="pid_conference" style="display:inline">[C67] </div>
             <div class="title" style="display:inline"> Identifying Entrainment in Task-oriented Conversations.</div>
             <div class="author">Run Chen, Yang Liu, Alexandros Papangelis, <span>Seokhwan Kim</span>, Julia Hirschberg, Dilek Hakkani-Tur</div>
@@ -1262,7 +1281,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2023-06-14</div>
+      <div id="footer">Last updated: 2023-07-31</div>
     </div>
   </body>
 </html>
