--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <img src="img/photo.jpg" alt="photo" />
             </div>
             <div id="text-header">
-              <h1>Seokhwan Kim<br />Principal Scientist, <a target="_blank" href="https://amazon.jobs/en/teams/alexa-ai">Amazon Alexa AI</a></h1>
+              <h1>Seokhwan Kim<br />Staff Software Engineer, <a target="_blank" href="https://cloud.google.com/">Google Cloud AI</a></h1>
             </div>
           </div>
         </div>
@@ -29,7 +29,7 @@
           <div class="icon pull-left text-center">
             <span class="fa fa-building-o fa-fw"></span>
           </div>
-          <div class="description pull-right">1120 Enterprise Way, Sunnyvale, CA 94089, USA</div>
+          <div class="description pull-right">1175 Borregas Ave, Sunnyvale, CA 94089, USA</div>
         </div>
         <div class="row">
           <div class="col-xs-6">
@@ -48,7 +48,7 @@
                 <span class="fa fa-envelope fa-fw"></span>
               </div>
               <div class="description pull-right">
-                <img src="img/email_amazon.png" />
+                <img src="img/email_google.png" />
               </div>
             </div>
           </div>
@@ -83,8 +83,20 @@
         <h2>Work Experiences</h2>
         <div class="job clearfix">
           <div class="col-xs-3">
+            <div class="profession">Staff Software Engineer</div>
+            <div class="year">Jun 2024 -</div>
+          </div>
+          <div class="col-xs-9">
+            <div class="where">
+              <a target="_blank" href="https://cloud.google.com/">Google</a>
+            </div>
+            <div class="description">Cloud AI</div>
+          </div>
+        </div>
+        <div class="job clearfix">
+          <div class="col-xs-3">
             <div class="profession">Principal Applied Scientist</div>
-            <div class="year">Oct 2021 -</div>
+            <div class="year">Oct 2021 - May 2024</div>
           </div>
           <div class="col-xs-9">
             <div class="where">
@@ -229,17 +241,6 @@
         </div>
         <div class="job clearfix">
           <div class="col-xs-3">
-            <div class="profession">Publicity Chair</div>
-            <div class="year">2020</div>
-          </div>
-          <div class="col-xs-9">
-            <div class="where">
-              <a target="_blank" href="https://sites.google.com/dstc.community/dstc9/home">The Ninth Dialog System Technology Challenge (DSTC9)</a>
-            </div>
-          </div>
-        </div>
-        <div class="job clearfix">
-          <div class="col-xs-3">
             <div class="profession">Challenge Chair</div>
             <div class="year">2019</div>
           </div>
@@ -251,45 +252,23 @@
         </div>
         <div class="job clearfix">
           <div class="col-xs-3">
-            <div class="profession">Steering Committee</div>
-            <div class="year">2018</div>
+            <div class="profession">Organizing Committee</div>
+            <div class="year">2017-2020</div>
           </div>
           <div class="col-xs-9">
             <div class="where">
-              <a target="_blank" href="http://workshop.colips.org/dstc7/">The Seventh Dialog System Technology Challenge (DSTC7)</a>
+              <a target="_blank" href="https://sites.google.com/dstc.community/dstc9/home">Dialog System Technology Challenges (DSTC6-9)</a>
             </div>
           </div>
         </div>
         <div class="job clearfix">
           <div class="col-xs-3">
             <div class="profession">Organizing Committee</div>
-            <div class="year">2017</div>
+            <div class="year">2015-2016</div>
           </div>
           <div class="col-xs-9">
             <div class="where">
-              <a target="_blank" href="http://workshop.colips.org/dstc6/">The Sixth Dialog System Technology Challenge (DSTC6)</a>
-            </div>
-          </div>
-        </div>
-        <div class="job clearfix">
-          <div class="col-xs-3">
-            <div class="profession">Organizing Committee</div>
-            <div class="year">2016</div>
-          </div>
-          <div class="col-xs-9">
-            <div class="where">
-              <a target="_blank" href="http://workshop.colips.org/dstc5/">The Fifth Dialog State Tracking Challenge (DSTC5)</a>
-            </div>
-          </div>
-        </div>
-        <div class="job clearfix">
-          <div class="col-xs-3">
-            <div class="profession">Organizing Committee</div>
-            <div class="year">2015</div>
-          </div>
-          <div class="col-xs-9">
-            <div class="where">
-              <a target="_blank" href="http://www.colips.org/workshop/dstc4/">The Fourth Dialog State Tracking Challenge (DSTC4)</a>
+              <a target="_blank" href="http://www.colips.org/workshop/dstc4/">Dialog State Tracking Challenges (DSTC4-5)</a>
             </div>
           </div>
         </div>
@@ -392,7 +371,7 @@
             <div class="pid_conference" style="display:inline">[C70] </div>
             <div class="title" style="display:inline">CESAR: Automatic Induction of Compositional Instructions for Multi-turn Dialogs.</div>
             <div class="author">Taha Aksu, Devamanyu Hazarika, Shikib Mehri, <span>Seokhwan Kim</span>, Dilek Hakkani-Tur, Yang Liu, Mahdi Namazifar</div>
-            <div class="book">To appear in Proceedings of the 2023 Conference on Empirical Methods in Natural Language Processing (<a target="_blank" href="https://2023.emnlp.org/">EMNLP 2023</a>), Singapore, Dec 2023.</div>
+            <div class="book">Proceedings of the 2023 Conference on Empirical Methods in Natural Language Processing (<a target="_blank" href="https://2023.emnlp.org/">EMNLP 2023</a>), Singapore, Dec 2023.</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -1299,7 +1278,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2023-11-29</div>
+      <div id="footer">Last updated: 2024-06-07</div>
     </div>
   </body>
 </html>
