--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         <div class="interest">Spoken Dialogue Systems</div>
         <div class="interest">Natural Language Understanding</div>
         <div class="interest">Large Language Model</div>
+        <div class="interest">LLM Agents</div>
       </div>
       <div class="box">
         <h2>Work Experiences</h2>
@@ -184,6 +185,17 @@
       </div>
       <div class="box">
         <h2>Professional Experiences</h2>
+        <div class="job clearfix">
+          <div class="col-xs-3">
+            <div class="profession">Program Chair</div>
+            <div class="year">2025</div>
+          </div>
+          <div class="col-xs-9">
+            <div class="where">
+              <a target="_blank" href="https://2025.sigdial.org/">SIGDIAL 2025</a>
+            </div>
+          </div>
+        </div>
         <div class="job clearfix">
           <div class="col-xs-3">
             <div class="profession">Virtual Infrastructure Co-Chair</div>
@@ -1133,6 +1145,24 @@
         <h2>Patents</h2>
         <div class="publication clearfix">
           <div class="col-xs-12">
+            <div class="pid_patent" style="display:inline">[P20] </div>
+            <div class="title" style="display:inline">Utilizing deep recurrent neural networks with layer-wise attention for punctuation restoration.</div>
+            <div class="author">
+              <span>Seokhwan Kim</span>
+            </div>
+            <div class="book">Registration #US11521071B2, USA, 06 Dec 2022.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-12">
+            <div class="pid_patent" style="display:inline">[P19] </div>
+            <div class="title" style="display:inline">Classifying terms from source texts using implicit and explicit class-recognition-machine-learning models.</div>
+            <div class="author">Sean MacAvaney, Franck Dernoncourt, Walter Chang, <span>Seokhwan Kim</span>, Doo Soon Kim, Chen Fang</div>
+            <div class="book">Registration #US11630952B2, USA, 18 Apr 2023.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-12">
             <div class="pid_patent" style="display:inline">[P18] </div>
             <div class="title" style="display:inline">Answering questions during video playback.</div>
             <div class="author">
@@ -1278,7 +1308,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2024-06-07</div>
+      <div id="footer">Last updated: 2025-05-12</div>
     </div>
   </body>
 </html>
