--- a/index.html
+++ b/index.html
@@ -377,6 +377,17 @@
         <h2>Publications</h2>
         <div class="publication clearfix">
           <div class="col-xs-1">
+            <div class="year">2024</div>
+          </div>
+          <div class="col-xs-11">
+            <div class="pid_conference" style="display:inline">[C71] </div>
+            <div class="title" style="display:inline">Redefining Proactivity for Information Seeking Dialogue.<div class="link" style="display:inline"><a target="_blank" href="https://aclanthology.org/2024.sicon-1.5.pdf">[PDF]</a></div><div class="link" style="display:inline"><a target="_blank" href="https://aclanthology.org/2024.sicon-1.5.bib">[bib]</a></div></div>
+            <div class="author">Jing Yang Lee, <span>Seokhwan Kim</span>, Kartik Mehta, Jiun-Yu Kao, Yu-Hsiang Lin, Arpit Gupta</div>
+            <div class="book">Proceedings of the Second Workshop on Social Influence in Conversations (<a target="_blank" href="https://sites.google.com/view/sicon2024/home">SICon 2024</a>), Miami, Nov 2024.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1">
             <div class="year">2023</div>
           </div>
           <div class="col-xs-11">
@@ -1308,7 +1319,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2025-05-12</div>
+      <div id="footer">Last updated: 2025-05-14</div>
     </div>
   </body>
 </html>
