--- a/index.html
+++ b/index.html
@@ -1156,6 +1156,22 @@
         <h2>Patents</h2>
         <div class="publication clearfix">
           <div class="col-xs-12">
+            <div class="pid_patent" style="display:inline">[P22] </div>
+            <div class="title" style="display:inline">Opinion-based natural language response generation.</div>
+            <div class="author">Chao Zhao, Spandana Gella, <span>Seokhwan Kim</span>, Alexandros Papangelis, Behnam Hedayatnia, Devamanyu Hazarika, Di Jin, Mahdi Namazifar, Yang Liu, Dilek Hakkani-Tur</div>
+            <div class="book">Registration #US12293758B1, USA, 06 May 2025.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-12">
+            <div class="pid_patent" style="display:inline">[P21] </div>
+            <div class="title" style="display:inline">Virtual conversational companion.</div>
+            <div class="author">Taehwan Kim, Sanqiang Zhao, Robinson Piramuthu, <span>Seokhwan Kim</span>, Yang Liu, Gokhan Tur, Eshan Bhatnagar</div>
+            <div class="book">Registration #US12205577B1, USA, 21 Jan 2025.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-12">
             <div class="pid_patent" style="display:inline">[P20] </div>
             <div class="title" style="display:inline">Utilizing deep recurrent neural networks with layer-wise attention for punctuation restoration.</div>
             <div class="author">
@@ -1319,7 +1335,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2025-05-14</div>
+      <div id="footer">Last updated: 2025-06-03</div>
     </div>
   </body>
 </html>
