--- a/index.html
+++ b/index.html
@@ -377,6 +377,16 @@
         <h2>Publications</h2>
         <div class="publication clearfix">
           <div class="col-xs-1">
+            <div class="year">2025</div>
+          </div>
+          <div class="col-xs-11">
+            <div class="pid_technical_report" style="display:inline">[T1] </div>
+            <div class="title" style="display:inline">Gemini 2.5: Pushing the Frontier with Advanced Reasoning, Multimodality, Long Context, and Next Generation Agentic Capabilities.<div class="link" style="display:inline"><a target="_blank" href="https://arxiv.org/abs/2507.06261">[preprint]</a></div></div>
+            <div class="author">Gemini Team, Google</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1">
             <div class="year">2024</div>
           </div>
           <div class="col-xs-11">
@@ -1335,7 +1345,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2025-06-03</div>
+      <div id="footer">Last updated: 2025-08-05</div>
     </div>
   </body>
 </html>
